# game-scripts

./: pyproject.toml
scripts/: terraria_auto_fish.py
